删除前端代码和后端修改部分缺陷